[package]
name = "onyx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Local-first Markdown note editor with live inline formatting"

[lib]
name = "onyx"
path = "src/lib.rs"
test = false
doctest = false

[[bin]]
name = "onyx"
path = "src/main.rs"
test = false

[dependencies]
# OpenAgents crates
wgpui = { path = "../../crates/wgpui", default-features = false, features = ["desktop"] }
editor = { path = "../../crates/editor" }
openagents-utils = { workspace = true }
# document = { path = "../../crates/document" }  # TODO: Add when document crate is created (Milestone 3)

# GPU
wgpu = { workspace = true }

# Desktop
winit = { workspace = true }
pollster = { workspace = true }

# Time
web-time = "1.1.0"

# Async
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# System
dirs = "5"
notify = "6"
arboard = "3.4"
chrono = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Platform-specific for window transparency
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = { version = "0.2", features = ["NSWindow", "NSColor", "NSResponder", "NSView"] }
raw-window-handle = "0.6"

# Unix process checking
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Update checking
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
semver = "1"

# Voice transcription
voice = { path = "../../crates/voice" }

[package.metadata.bundle]
name = "Onyx"
identifier = "com.openagents.onyx"
icon = ["resources/app-icon@2x.png", "resources/app-icon.png"]
version = "0.1.0"
copyright = "Copyright 2024-2025 OpenAgents"
category = "public.app-category.productivity"
short_description = "Local-first Markdown note editor"
long_description = """
Onyx is a GPU-rendered Markdown note editor with live inline formatting,
vim mode, and local-first storage.
"""
osx_minimum_system_version = "10.15"
osx_url_schemes = ["onyx"]

[dev-dependencies]
tempfile = "3"
