[package]
name = "pylon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Standalone headless provider connector for the OpenAgents Compute Market"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bip39 = "2.2.0"
nostr = { path = "../../crates/nostr/core" }
openagents-provider-substrate = { path = "../../crates/openagents-provider-substrate" }
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
