[package]
name = "pylon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Standalone headless provider connector for the OpenAgents Compute Market"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bip39 = "2.2.0"
hex = { workspace = true }
nostr = { path = "../../crates/nostr/core" }
nostr-client = { path = "../../crates/nostr/client" }
openagents-provider-substrate = { path = "../../crates/openagents-provider-substrate" }
openagents-spark = { path = "../../crates/spark" }
rand.workspace = true
reqwest.workspace = true
rustls = { version = "0.23", features = ["ring"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
futures-util = "0.3"
tempfile = "3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
