[package]
name = "openagents-runtime-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = "0.7"
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower = "0.5"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid.workspace = true
hex.workspace = true
jsonwebtoken = "9"

[dev-dependencies]
anyhow.workspace = true
http-body-util = "0.1"
tempfile.workspace = true
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "openagents-runtime-service"
path = "src/main.rs"
