[package]
name = "openagents-runtime-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = { version = "0.7", features = ["ws"] }
chrono.workspace = true
clap.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
tower = "0.5"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid.workspace = true
hex.workspace = true
bitcoin.workspace = true
jsonwebtoken = "9"
reqwest.workspace = true
base64.workspace = true
protocol = { path = "../../crates/protocol" }
nostr.workspace = true
nostr-client = { path = "../../crates/nostr/client" }
openagents-l402 = { path = "../../crates/openagents-l402" }
openagents-proto = { path = "../../crates/openagents-proto" }
neobank = { path = "../../crates/neobank" }

[dev-dependencies]
anyhow.workspace = true
http-body-util = "0.1"
tempfile.workspace = true
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = { workspace = true }

[[bin]]
name = "openagents-runtime-service"
path = "src/main.rs"

[[bin]]
name = "runtime-migrate"
path = "src/bin/runtime-migrate.rs"

[[bin]]
name = "runtime-smoke"
path = "src/bin/runtime-smoke.rs"

[[bin]]
name = "vignette-phase0-issue-to-pr"
path = "src/bin/vignette-phase0-issue-to-pr.rs"

[[bin]]
name = "vignette-liquidity-pool-mvp0"
path = "src/bin/vignette-liquidity-pool-mvp0.rs"

[[bin]]
name = "vignette-neobank-pay-bolt11"
path = "src/bin/vignette-neobank-pay-bolt11.rs"
